--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -1,10 +1,10 @@
 #seriesposts {
   margin-bottom: 30px;
   padding: 15px 20px 1px;
-  background: #dde7ef;
+  background: #E9F2F5;
   border-radius: 3px;
   @media(max-width: 600px) {
-    padding: 15px 30px 10px;
+    padding: 15px 20px 10px;
   }
 
   h5 {
@@ -56,12 +56,19 @@
 
         @media(max-width: 600px) {
           min-width: 60px;
-        margin-right: 10px;
+          margin-right: 10px;
+          font-weight: normal;
+          font-size: .9em;
         }
       }
 
       a {
         color: #597d87;
+
+        @media(max-width: 600px) {
+          font-family: 'TTNorms-Regular';
+          font-size: .9em;
+        }
       }
     }
   }
