--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -2,6 +2,131 @@
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
 <script src="{{asset "js/slick.min.js"}}"></script>
+<style>
+
+.menu {
+  margin: 1em auto;
+  width: 100%;
+	position: relative;
+  background: white;
+	height: 44px;
+	margin-top: -10px;
+	border-top: 1px solid #dbdde7;
+  box-shadow: 0px 2px 2px #cbccd4;
+}
+.menu > ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+	position: absolute;
+		right: 0;
+		z-index: 1000;
+}
+.menu > ul > li {
+	margin: 0;
+	width: 300px;
+	background: linear-gradient(45deg, #ffffff, #edfaff);
+	color: #69738b;
+	padding: .5em 10px .5em 60px;
+	position: relative;
+	border-left: 4px solid #fff;
+	-webkit-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+	transition: all 0.2s ease;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	/*border: 1px solid linear-gradient(45deg, #f8fcfe, #e0ecf1);*/
+	border-left: 0;
+}
+.menu > ul > li i {
+	margin-right: 0.5em;
+	font-size: 1.5em;
+	vertical-align: middle;
+	float: right;
+	height: 20px;
+	margin-top: -10px;
+}
+.menu > ul > li:before {
+  content: '';
+  display: none;
+  width: 100%;
+  height: 5em;
+  position: absolute;
+  top: 100%;
+  left: 0;
+}
+
+.menu > ul > li:hover {
+  background: #41A7FC;
+  color: #fff;
+	cursor: pointer;
+}
+.menu > ul > li:hover:before {
+  display: block;
+}
+.menu > ul > li:hover > ul {
+  display: block;
+}
+.menu > ul > li > ul {
+  display: none;
+  position: absolute;
+  z-index: 999;
+  list-style: none;
+  top: 3em;
+  left: -3px;
+  background: #fff;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  border-radius: 4px;
+  box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.2);
+}
+.menu > ul > li > ul:after {
+  position: absolute;
+  bottom: 100%;
+  right: 6%;
+  content: '';
+  border-bottom: solid 9px #fff;
+  border-left: solid 8px transparent;
+  border-right: solid 8px transparent;
+}
+.menu > ul > li > ul > li {
+  padding: 0.5em 1.5em;
+  color: #929bb0;
+  border-bottom: 1px solid #e9e9e9;
+  border-left: 4px solid #fff;
+  transition: all 0.2s ease;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.menu > ul > li > ul > li:last-child {
+  border-bottom: 0;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+.menu > ul > li > ul > li:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.menu > ul > li > ul > li:hover {
+  color: #7C7E8D;
+  border-left: 4px solid #41A7FC;
+	cursor: pointer;
+}
+.panel {
+	margin: -20px auto 15px;
+	height: 46px;
+background: white;
+}
+svg {
+	height:20px;
+	width: 20px;
+	fill: #72b0e1;
+	margin-right: 8px;
+}
+</style>
 <section class="content-wrap archive">
 	{{> postheader}}
 	<div class="container">
@@ -138,6 +263,17 @@
 				</div>
 				{{!--{{> repos}}--}}
 			</div>
+				<div class="menu">
+				  <ul>
+				    <li>Select a Project <i class="fas fa-caret-down"></i>
+				      <ul>
+				        <li id="stockholm"><svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Ghost icon</title><path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path></svg> ghosttheme-stockholm </li>
+				        <li id="tokyo"><svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>Ghost icon</title><path d="M9.604 19.199H.008V24h9.597v-4.801zm14.39 0h-9.591V24h9.591v-4.801zm.003-9.599H0v4.8h23.997V9.6zM24 0h-4.801v4.801H24V0zm-9.596 0H.008v4.801h14.396V0z"></path></svg> ghosttheme-tokyo </li>
+				        <li id="jupyter"><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>Jupyter icon</title><path d="M12.2 18.1c-3.8 0-7.2-1.4-9-3.4.7 1.8 1.9 3.4 3.5 4.5s3.5 1.7 5.5 1.7 3.9-.6 5.5-1.7 2.8-2.7 3.5-4.5c-1.8 2-5.2 3.4-9 3.4zM12.2 4.9c3.8 0 7.2 1.4 9 3.4-.7-1.8-1.9-3.4-3.5-4.5C16 2.6 14.1 2 12.2 2c-2 0-3.9.6-5.5 1.7-1.6 1.2-2.8 2.7-3.5 4.6 1.8-2.1 5.1-3.4 9-3.4z"></path><circle cx="19.2" cy="1.5" r="1.4"></circle><circle cx="5.1" cy="22.1" r="1.8"></circle><circle cx="3.6" cy="3.3" r="1"></circle></svg> Planet Jupyter </li>
+				      </ul>
+				    </li>
+				  </ul>
+				</div>
 			{{> kanban}}
 		{{/post}}
 	</div>
