--- a/src/less/projects/picker.less
+++ b/src/less/projects/picker.less
@@ -143,6 +143,8 @@ svg {
 
 .mobilemenu {
 	display: none !important;
+  margin: 0;
+  width: -webkit-fill-available;
 
   @media(max-width: 600px){
     display: flex !important;
