added more projects

--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -138,7 +138,7 @@
 				</div>
 				{{!--{{> repos}}--}}
 			</div>
-				<div class="menu">
+				<div class="projectdropdown">
 				  <ul>
 				    <li class="picker">Select a Project <i class="fas fa-caret-down"></i>
 				      <ul>
