--- a/src/less/projects/picker.less
+++ b/src/less/projects/picker.less
@@ -1,5 +1,5 @@
 .page-projects {
-  .menu {
+  .projectdropdown {
     margin: 1em auto;
     width: 100%;
     position: relative;
@@ -10,7 +10,7 @@
     box-shadow: 0 2px 2px #cbccd4;
   }
 
-  .menu > ul {
+  .projectdropdown > ul {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -48,7 +48,7 @@
     }
   }
 
-  .menu > ul > li i {
+  .projectdropdown > ul > li i {
     margin-right: 0.5em;
     font-size: 1.5em;
     vertical-align: middle;
@@ -57,7 +57,7 @@
     margin-top: -10px;
   }
 
-  .menu > ul > li:before {
+  .projectdropdown > ul > li:before {
     content: '';
     display: none;
     width: 100%;
@@ -67,17 +67,17 @@
     left: 0;
   }
 
-  .menu > ul > li:hover {
+  .projectdropdown > ul > li:hover {
     background: #41A7FC;
     color: #fff;
     cursor: pointer;
   }
 
-  .menu > ul > li:hover:before {
+  .projectdropdown > ul > li:hover:before {
     display: block;
   }
 
-  .menu > ul > li:hover > ul {
+  .projectdropdown > ul > li:hover > ul {
     display: block;
     @media(max-width: 600px) {
       display: block;
@@ -88,7 +88,7 @@
     }
   }
 
-  .menu > ul > li > ul {
+  .projectdropdown > ul > li > ul {
     display: none;
     position: absolute;
     z-index: 999;
@@ -103,7 +103,7 @@
     box-shadow: 0 0 40px 0 rgba(0, 0, 0, 0.2);
   }
 
-  .menu > ul > li > ul:after {
+  .projectdropdown > ul > li > ul:after {
     position: absolute;
     bottom: 100%;
     right: 6%;
@@ -113,7 +113,7 @@
     border-right: solid 8px transparent;
   }
 
-  .menu > ul > li > ul > li {
+  .projectdropdown > ul > li > ul > li {
     padding: 0.5em 1.5em;
     color: #929bb0;
     border-bottom: 1px solid #e9e9e9;
@@ -124,18 +124,18 @@
     align-items: center;
   }
 
-  .menu > ul > li > ul > li:last-child {
+  .projectdropdown > ul > li > ul > li:last-child {
     border-bottom: 0;
     border-bottom-right-radius: 3px;
     border-bottom-left-radius: 3px;
   }
 
-  .menu > ul > li > ul > li:first-child {
+  .projectdropdown > ul > li > ul > li:first-child {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
   }
 
-  .menu > ul > li > ul > li:hover {
+  .projectdropdown > ul > li > ul > li:hover {
     color: #7C7E8D;
     border-left: 4px solid #41A7FC;
     cursor: pointer;
