--- a/partials/thisseries-widget.hbs
+++ b/partials/thisseries-widget.hbs
@@ -20,7 +20,7 @@
     }
 
     function posts_in_series(series, seriesname) {
-      var series_endpoint = 'https://hackersandslackers.com/ghost/api/v2/content/posts/?key=b1a7c274fc24aa798ec464497b&filter=tag:' + series
+      var series_endpoint = 'https://hackersandslackers.com/ghost/api/v2/content/posts/?key=b1a7c274fc24aa798ec464497b&filter=tag:' + series + '&order_by=created_at'
       $.ajax({
         method: "GET",
         url: series_endpoint,
