--- a/src/less/projects/picker.less
+++ b/src/less/projects/picker.less
@@ -10,13 +10,20 @@
     box-shadow: 0 2px 2px #cbccd4;
   }
 
-  .projectdropdown > ul {
+  .dropdown {
     margin: 0;
     padding: 0;
     list-style: none;
-    position: absolute;
+    position: relative;
     right: 0;
     z-index: 1000;
+    height: fit-content;
+    background: rgba(0, 0, 255, 0);
+
+    ul {
+      margin: 0;
+    }
+
     @media(max-width: 600px) {
       width: -webkit-fill-available;
       width: -moz-fill-available;
@@ -35,9 +42,10 @@
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
     transition: all 0.2s ease;
-    display: flex;
-    justify-content: space-between;
+    display: block;
+    height: 23px;
     align-items: center;
+    border: 1px solid #d8d8d8;
     /*border: 1px solid linear-gradient(45deg, #f8fcfe, #e0ecf1);*/
     border-left: 0;
   }
@@ -54,7 +62,6 @@
     vertical-align: middle;
     float: right;
     height: 20px;
-    margin-top: -10px;
   }
 
   .projectdropdown > ul > li:before {
@@ -89,11 +96,10 @@
   }
 
   .projectdropdown > ul > li > ul {
-    display: none;
-    position: absolute;
+    position: relative;
     z-index: 999;
     list-style: none;
-    top: 3em;
+    top: 1em;
     left: -3px;
     background: #fff;
     padding: 0;
@@ -176,7 +182,6 @@
     height: 100%;
     width: 100%;
     background: black;
-    display: none;
     opacity: 0;
     transition: all .7s ease-out;
     z-index: 5;
@@ -184,5 +189,6 @@
     left:0;
     bottom:0;
     right:0;
+    display: none;
   }
 }
