rough fix for projects dropdown

--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -39,6 +39,7 @@ blockquote pre {
       white-space: pre-line;
       max-height: 400px;
       overflow-x: visible;
+      font-size: 13px !important;
     }
 
     code {
@@ -79,7 +80,7 @@ blockquote pre {
     height: 100%;
     font-size: 0.9em;
     @media(max-width: 600px) {
-      font-size: 14px;
+      font-size: 13px !important;
     }
   }
 
@@ -241,7 +242,7 @@ blockquote pre {
     color: #d3dce0;
     font-family: dm;
     font-weight: 200;
-    line-height: 1.7;
+    line-height: 1.5;
     white-space: pre-wrap;
     overflow-wrap: break-word;
 
