post preview footers and general homepage SEO

--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -14,7 +14,7 @@
   <div class="content">
     <div class="post-head">
       <h2 class="post-title"><a href="{{url}}" class="title-link">{{{title}}}</a></h2>
-        <h5 class="post-excerpt">{{excerpt words="40"}}</h5>
+        <h3 class="post-excerpt">{{excerpt words="40"}}</h3>
     </div>
     {{^has tag="Roundup"}}
       <div class="post-content">
@@ -31,7 +31,7 @@
         {{primary_author.bio}}
           {{!--{{#unless profile_image}}--}}
             <a href="{{url}}" class="meta-item author"><i class="fal fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i><span>{{name}}</span></a>
-            <a href="{{url}}" class="author-mobile"><i class="fal fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i><div class="info"><span>{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div></a>
+            <a href="{{url}}" class="meta-item author-mobile"><i class="fal fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i><div class="info"><span>{{slug}}</span><span class="mobile-date">{{date format="MMM DD"}}</span></div></a>
         {{!--  {{/unless}}
           {{#if profile_image}}
             <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="{{name}} avatar" class="avi" data-rjs="3"><span>{{name}}</span></a>
