kanban minor fixes

--- a/src/less/projects/kanban.less
+++ b/src/less/projects/kanban.less
@@ -90,7 +90,7 @@
   }
 
   .dropdown {
-    
+
     border-radius: 3px;
     padding: 5px 10px;
     color: #bbbbbb;
@@ -327,7 +327,9 @@
               width: 15px;
               height: 15px;
               transform: rotate(-45deg);
-              margin-top: 22px;
+              top: 21px;
+              position: absolute;
+              right: 31px;
             }
 
             &.Subtask,
