changed JSON color scheme

--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -3,7 +3,7 @@
   line-height: 1.4 !important;
 
   .hljs-attr {
-    color: #e471a6;
+    color: #e471a6 !important;
     font-family: 'AFParseGroteskMono-Bold';
   }
 
@@ -40,7 +40,7 @@
   .hljs-meta-string,
   .hljs-regexp,
   .hljs-string {
-    color: #98c379;
+    color: #c39dea !important;
   }
 
   .hljs-built_in,
