--- a/src/less/global/tags.less
+++ b/src/less/global/tags.less
@@ -418,7 +418,7 @@
 
   .bigdata{
     color: #12b3a3;
-    background: #bbfde5;
+    background: #d3ffef;
 
     * {
       color: #12b3a3 !important;
