--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -270,7 +270,7 @@
 				background: @hover-color;
 				border: 1px solid @hover-color;
 				color: white;
-				box-shadow: 1px 1px 1px #239084;
+				box-shadow: 1px 1px 0px #239084;
 			}
 		}
 	}
@@ -292,6 +292,27 @@
 			display: flex;
 			justify-content: space-between;
 			margin: 0 !important;
+			height: 35px;
+		  margin: auto;
+		  display: flex;
+		  justify-content: space-between;
+
+			.btn {
+			  align-items: center;
+			  justify-content: space-around;
+			  display: inline-flex;
+			  background-color: #fff;
+			  width: 40px;
+			  height: 40px;
+			  line-height: 40px;
+			  margin: 0 3px;
+			  text-align: center;
+			  position: relative;
+			  overflow: hidden;
+			  box-shadow: 0 0 3px 1px rgba(95, 93, 138, 0.15);
+			  opacity: 0.99;
+			  padding: 0;
+			}
 
 			.fab,
 			i {
