fixed previews on tag page, reduced font weight of footer links

--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -88,7 +88,7 @@
 
 				a {
 					color: white;
-					font-family: 'TTNorms-Medium', sans-serif !important;
+					font-family: 'TTNorms-Regular', sans-serif !important;
 					border: none;
 				}
 			}
