--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -1,5 +1,9 @@
 @import "../global/variables.less";
 
+.tag-template .post-preview {
+  padding:0 !important;
+}
+
 .page-series {
   .page-head {
     margin: 40px 40px 0;
