changed link preview endpoint, added preview placeholders

--- a/src/less/posts.less
+++ b/src/less/posts.less
@@ -3,7 +3,6 @@
 
 /* Post Styles */
 @import 'posts/about-author.less';
-@import 'posts/code.less';
 @import 'posts/postheader.less';
 @import 'posts/post.less';
 @import 'posts/linkpreview.less';
@@ -13,8 +12,10 @@
 @import 'posts/galleries.less';
 @import 'posts/article-preview.less';
 @import 'posts/serieswidget.less';
+@import 'posts/previewplaceholder.less';
 
 /* Code */
+@import 'posts/code.less';
 @import 'posts/languages/shell.less';
 @import 'posts/languages/python.less';
 @import 'posts/languages/javascript.less';
