--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -99,12 +99,12 @@
   }
 
   &:hover{
-    cursor: pointer;
+    cursor: pointer !important;
+  }
 
-    * {
-      &:hover {
-        cursor: pointer;
-      }
+  * {
+    &:hover {
+      cursor: pointer !important;
     }
   }
 
@@ -207,6 +207,8 @@
     position: relative;
 
     @media(max-width: 600px) {
+      padding: 20px 10px;
+      display: block;
       margin-bottom: 0;
     }
 
@@ -217,7 +219,12 @@
       line-height: 1.3;
       text-align: left;
       @media(max-width: 600px) {
-        display: none;
+        display: block;
+        margin: 10px 0 0 !important;
+        width: 100%;
+        white-space: normal;
+        margin-bottom: 10px;
+        font-size: 1.1em;
       }
     }
 
@@ -230,18 +237,19 @@
       font-size: 1.2;
       text-align: left;
       @media(max-width: 600px) {
-        display: block;
-        margin: 10px 0;
+        display: none;
+        margin: 10px 0 !important;
+        width: 100%;
+        white-space: normal;
+        margin-bottom: 10px;
+        font-size: 1.1em;
       }
     }
 
     &:hover {
       cursor: pointer;
     }
-    @media(max-width: 600px) {
-      padding: 10px;
-      display: block;
-    }
+
 
     p {
       color: #505050;
@@ -262,7 +270,11 @@
         margin: 10px 0 !important;
       }
       @media(max-width: 600px) {
-        display: none;
+        font-size: .8em !important;
+        white-space: normal;
+        height: fit-content;
+        max-height: none;
+        margin: 5px 0 !important;
       }
     }
   }
