author cover fixes

--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -1,6 +1,27 @@
 @import "../global/variables.less";
 
 .author-template {
+
+	.cover {
+		.avatar {
+			margin: 0 !important;
+			width: 85px;
+	    height: 85px;
+	    float: none;
+		}
+
+		h3 {
+			font-family: 'TTNorms-Regular', serif;
+    	font-size: 1.5em;
+			margin: 10px;
+		}
+
+		.bio {
+			  margin-top: 5px;
+		}
+	}
+
+
 	.widget {
 		order: 1;
 
