--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -127,7 +127,7 @@
 			letter-spacing: 0;
 			font-weight: 600;
 			text-align: center;
-			font-family: 'ProductSans-Regular', 'TTNorms-Medium' !important;
+			font-family: 'ProductSans-Medium', 'TTNorms-Medium' !important;
 		}
 
 		a {
