new code snippet font

--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -39,7 +39,6 @@ blockquote pre {
       white-space: pre-line;
       max-height: 400px;
       overflow-x: visible;
-      font-size: 13px !important;
     }
 
     code {
@@ -69,19 +68,16 @@ blockquote pre {
     color: #3297b5;
     padding: 4px 6px;
     border-radius: 2px;
-    font-weight: 600;
     font-size: 0.8em;
-    font-family: 'AFParseGroteskMono-Light';
+    font-weight: 400;
+    font-family: 'Hack';
     white-space: nowrap;
   }
 
   code {
     margin: 0;
     height: 100%;
-    font-size: 0.9em;
-    @media(max-width: 600px) {
-      font-size: 13px !important;
-    }
+    font-size: 0.7em;
   }
 
 
@@ -170,7 +166,8 @@ blockquote pre {
 
     .hljs-string {
       color: #d2c69e;
-      font-family: 'AFParseGroteskMono-Light';
+      font-weight: 400;
+      font-family: 'Hack';
     }
 
     .hljs-name {
@@ -208,7 +205,8 @@ blockquote pre {
       -webkit-font-smoothing: antialiased;
       position: relative;
       padding: 7px 0 5px;
-      font-family: 'AFParseGroteskMono-Bold';
+      font-weight: 700;
+      font-family: 'Hack';
       font-size: 1.15em;
     }
   }
@@ -228,7 +226,8 @@ blockquote pre {
       -webkit-font-smoothing: antialiased;
       position: relative;
       padding: 7px 0 5px;
-      font-family: 'AFParseGroteskMono-Bold';
+      font-weight: 700;
+      font-family: 'Hack';
       font-size: 1.15em;
     }
   }
