--- a/src/less/posts/languages/config.less
+++ b/src/less/posts/languages/config.less
@@ -85,7 +85,8 @@
 
   .hljs-string {
     color: #A3BE8C;
-    font-family: 'AFParseGroteskMono-Light';
+    font-weight: 400;
+    font-family: 'Hack';
   }
 
   .hljs-title {
@@ -139,7 +140,8 @@
 
   .hljs-meta-string {
     color: #A3BE8C;
-    font-family: 'AFParseGroteskMono-Light';
+    font-weight: 400;
+    font-family: 'Hack';
   }
 
   .hljs-attr {
