--- a/src/less/posts/languages/javascript.less
+++ b/src/less/posts/languages/javascript.less
@@ -102,7 +102,8 @@
 
   .hljs-string {
     color: #F4E39D;
-    font-family: 'AFParseGroteskMono-Light';
+    font-weight: 400;
+    font-family: 'Hack';
   }
 
   .hljs-attr {
