--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -4,7 +4,8 @@
 
   .hljs-attr {
     color: #e471a6 !important;
-    font-family: 'AFParseGroteskMono-Bold';
+    font-weight: 700;
+    font-family: 'Hack';
   }
 
   .hljs-string {
