--- a/src/less/posts/languages/sql.less
+++ b/src/less/posts/languages/sql.less
@@ -46,7 +46,8 @@
   .hljs-selector-pseudo,
   .hljs-string {
     color: #b0def0;
-    font-family: 'AFParseGroteskMono-Light';
+    font-weight: 400;
+    font-family: 'Hack';
   }
   /*color: fg_purple*/
   .hljs-attribute,
@@ -60,7 +61,8 @@
   .hljs-selector-tag,
   .hljs-tag {
     color: #79bbf3;
-    font-family: 'AFParseGroteskMono-Bold';
+    font-weight: 700;
+    font-family: 'Hack';
   }
   /*color: fg_aqua*/
   .hljs-subst,
