--- a/src/less/posts/languages/default.less
+++ b/src/less/posts/languages/default.less
@@ -9,7 +9,8 @@
   padding: 0 25px 20px;
   white-space: pre-wrap !important;
   color: #d3dce0;
-  font-family: 'AFParseGroteskMono-Light';
+  font-weight: 400;
+  font-family: 'Hack';
   @media(max-width: 600px) {
     padding: 0 20px 20px;
   }
@@ -31,7 +32,8 @@
     margin-bottom: 0;
     margin-left: -6%;
     padding: 8px 40px;
-    font-family: 'AFParseGroteskMono-Bold';
+    font-weight: 700;
+    font-family: 'Hack';
     font-size: 1.15em;
     font-style: normal;
     font-variant: normal;
@@ -51,10 +53,6 @@
   }
 
   * {
-    font-size: 14px;
     margin: 0;
-    @media(max-width: 600px) {
-      font-size: 12px;
-    }
   }
 }
