--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -33,7 +33,8 @@
   .hljs-regexp,
   .hljs-string {
     color: #93DCB8;
-    font-family: 'AFParseGroteskMono-Light';
+    font-weight: 400;
+    font-family: 'Hack';
   }
 
   .hljs-params {
@@ -51,7 +52,8 @@
   .hljs-class,
   .hljs-title {
     color: #ffd712;
-    font-family: 'AFParseGroteskMono-Bold';
+    font-weight: 700;
+    font-family: 'Hack';
   }
 
   .hljs-attr,
@@ -66,7 +68,8 @@
 
   .hljs-keyword {
     color: #00b1d5;
-    font-family: 'AFParseGroteskMono-Bold';
+    font-weight: 700;
+    font-family: 'Hack';
   }
 
   .hljs-function {
