--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -51,7 +51,7 @@
   .hljs-string,
   .hljs-symbol,
   .hljs-template-tag {
-    color: #4cd213;
+    color: #a6c6ff;
   }
 
   .hljs-meta,
@@ -88,27 +88,7 @@
 .hljs.output,
 .language-output {
   &::before {
-    margin-bottom: 0;
-    margin-left: -40px;
-    width: 110%;
-    height: auto;
     content: "Output" !important;
-    display: block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    position: relative;
-    font-weight: 700;
-
-    @media(max-width: 600px) {
-      width: -webkit-fill-available;
-      width: -moz-webkit-fill-available;
-      padding: 8px 0;
-      font-size: 1.2em;
-      margin-bottom: 0;
-      margin-left: 0;
-    }
   }
 }
 
@@ -121,25 +101,6 @@
     color: #df91dc !important;
   }
   &::before {
-    margin-bottom: 0;
-    margin-left: -40px;
-    width: 110%;
-    height: auto;
     content: "Shell" !important;
-    display: block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    position: relative;
-    font-weight: 700;
-
-    @media(max-width: 600px) {
-      width: -webkit-fill-available;
-      width: -moz-webkit-fill-available;
-      padding: 8px 0;
-      font-size: 1.2em;
-      margin: 0 auto;
-    }
   }
 }
