--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -43,6 +43,7 @@ blockquote pre {
 
     code {
       overflow-y: hidden;
+      position: relative;
       transition: all 0.5s ease-out;
     }
 
@@ -53,7 +54,7 @@ blockquote pre {
 
   pre > code {
     white-space: pre-wrap;
-    padding: 0 25px 15px;
+    padding: 50px 25px 15px;
     @media(max-width: 600px) {
       overflow-y: hidden;
     }
@@ -77,7 +78,7 @@ blockquote pre {
   code {
     margin: 0;
     height: 100%;
-    font-size: 0.7em;
+    font-size: 0.75em;
   }
 
 
@@ -128,16 +129,7 @@ blockquote pre {
   .hljs.ini,
   .language-ini {
     &::before {
-      margin-bottom: 0;
-      width: 110%;
-      height: auto;
       content: "ini";
-      display: block;
-      font-style: normal;
-      font-variant: normal;
-      text-rendering: auto;
-      -webkit-font-smoothing: antialiased;
-      position: relative;
     }
   }
 
@@ -176,59 +168,19 @@ blockquote pre {
     background: #272738;
 
     &::before {
-      margin-bottom: 0;
-      width: 110%;
-      height: auto;
-      color: white;
       content: "HTML";
-      display: block;
-      font-style: normal;
-      font-variant: normal;
-      text-rendering: auto;
-      -webkit-font-smoothing: antialiased;
-      position: relative;
     }
   }
 
   .language-xml {
     &::before {
       content: "XML" !important;
-      margin-bottom: 0;
-      width: -webkit-fill-available;
-      height: auto;
-      margin: auto;
-      color: white;
-      display: block;
-      font-style: normal;
-      font-variant: normal;
-      text-rendering: auto;
-      -webkit-font-smoothing: antialiased;
-      position: relative;
-      padding: 7px 0 5px;
-      font-weight: 700;
-      font-family: 'Hack';
-      font-size: 1.15em;
     }
   }
 
   .language-css {
     &::before {
       content: "CSS" !important;
-      margin-bottom: 0;
-      width: -webkit-fill-available;
-      height: auto;
-      margin: auto;
-      color: white;
-      display: block;
-      font-style: normal;
-      font-variant: normal;
-      text-rendering: auto;
-      -webkit-font-smoothing: antialiased;
-      position: relative;
-      padding: 7px 0 5px;
-      font-weight: 700;
-      font-family: 'Hack';
-      font-size: 1.15em;
     }
   }
 
@@ -247,21 +199,6 @@ blockquote pre {
 
     &::before {
       content: "Endpoint" !important;
-      -webkit-font-smoothing: antialiased;
-      display: block;
-      position: relative;
-      width: 104%;
-      height: auto;
-      margin-bottom: 0;
-      margin-left: -6%;
-      padding: 8px 40px;
-      font-family: AvenirNextLTPro-Medium;
-      font-size: 1.3em;
-      font-style: normal;
-      font-variant: normal;
-      font-weight: 600;
-      text-rendering: auto;
-      text-shadow: -2px 2px 1px rgba(0,9,46,.6)!important;
     }
   }
 }
@@ -269,17 +206,7 @@ blockquote pre {
 .language-output,
 .output {
   &::before {
-    width: 110%;
-    margin-bottom: 0;
-    height: auto;
     content: "Output" !important;
-    display: block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    position: relative;
-    font-weight: 700;
   }
 }
 
@@ -294,17 +221,7 @@ blockquote pre {
   }
 
   &::before {
-    width: 110%;
-    height: auto;
-    margin-bottom: 0;
     content: "CSS" !important;
-    display: block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    position: relative;
-    font-weight: 700;
   }
 }
 
@@ -315,16 +232,7 @@ blockquote pre {
   }
 
   &::before {
-    width: 110%;
-    height: auto;
     content: "Groovy" !important;
-    display: block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    position: relative;
-    font-weight: 700;
   }
 }
 
@@ -335,17 +243,7 @@ blockquote pre {
   }
 
   &::before {
-    width: 110%;
-    height: auto;
     content: "Yaml" !important;
-    margin-bottom: 0;
-    display: block;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    position: relative;
-    font-weight: 700;
   }
 }
 
@@ -356,17 +254,7 @@ blockquote pre {
   }
 
   &::before {
-    width: 110%;
-    height: auto;
     content: "TOML" !important;
-    display: block;
-    margin-bottom: 0;
-    font-style: normal;
-    font-variant: normal;
-    text-rendering: auto;
-    -webkit-font-smoothing: antialiased;
-    position: relative;
-    font-weight: 700;
   }
 }
 
